--- a/.env
+++ b/.env
@@ -14,6 +14,7 @@ OPENAI_API_KEY=sk-proj-j-S1j9iA9CcC42cFw2mUcCv3X0KTb7M3hgqZPDjvJ_0DRk8m6QyBpJAFU
 
 neo4j_desktop_password=08Mi3009@
 
+together_ai_api_key=tgp_v1_PoHC0z_NQ9z7XluCXtUez9Jc-mV8fjDz8hmwVBccGBI
 
 # Wait 60 seconds before connecting using these details, or login to https://console.neo4j.io to validate the Aura Instance is available
 #NEO4J_URI=neo4j+s://40545226.databases.neo4j.io
