--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ decorator==5.2.1
 defusedxml==0.7.1
 distro==1.9.0
 exceptiongroup==1.3.0
+elevenlabs==2.5.0
 executing==2.2.0
 faiss-cpu==1.11.0
 fastapi==0.115.13
@@ -80,6 +81,10 @@ langgraph-checkpoint==2.0.26
 langgraph-prebuilt==0.2.1
 langgraph-sdk==0.1.70
 langsmith==0.3.45
+livekit==1.0.11
+livekit-agents==1.1.5
+livekit-api==1.0.3
+livekit-protocol==1.0.4
 MarkupSafe==3.0.2
 marshmallow==3.26.1
 matplotlib-inline==0.1.7
@@ -185,6 +190,7 @@ wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+websockets==15.0.1
 widgetsnbextension==4.0.14
 xxhash==3.5.0
 yarl==1.20.0
